--- a/client/src/pure.css
+++ b/client/src/pure.css
@@ -23,3 +23,35 @@ html, body, #root, .app {
     width: 100%;
     min-height: 100%;
 }
+
+.filelist {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+}
+
+.filelist li {
+    cursor: default;
+    border: solid 1px transparent;
+    width: 100%;
+    height: 20px;
+}
+
+.filelist li:hover {
+    background-color: rgba(0, 0, 0, 0.05);
+    border: solid 1px rgba(0, 0, 0, 0.1);
+}
+
+.filelist li a {
+    text-decoration: none;
+    outline: none;
+    color: inherit;
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
+.icon {
+    height: 100%;    
+}
