--- a/client/src/pure.css
+++ b/client/src/pure.css
@@ -1,16 +1,11 @@
 @font-face {
-    font-family: Futura;
-    src: url('/assets/fonts/Futura-Medium.ttf') format('truetype');
+    font-family: Lato;
+    src: url('/assets/fonts/Lato-Regular.ttf');
 }
-  
+
 @font-face {
-    font-family: FuturaICGDemi;
-    src: url('/assets/fonts/Futura-ICG-Demi.ttf') format('truetype');
-}
-  
-@font-face {
-    font-family: AndaleMono;
-    src: url('/assets/fonts/AndaleMono.ttf') format('truetype');
+    font-family: Raleway;
+    src: url('/assets/fonts/Raleway-Regular.ttf');
 }
 
 * {
@@ -19,11 +14,152 @@
 }
 
 html, body, #root, .app {
-    display: flex;
     width: 100%;
     min-height: 100%;
 }
 
+body {
+    font-family: "Raleway", sans-serif;
+    font-weight: 300;
+    font-size: 1.111em;
+    line-height: 175%;
+    color: #1a1a1a;
+}
+
+
+/**
+ * Helpers
+ */
+.text-right {
+    text-align: right;
+}
+
+.hidden {
+    display: none !important;
+}
+
+.flex {
+    display: flex;
+}
+
+.space-between {
+    justify-content: space-between;
+}
+
+.align-end {
+    align-items: end;
+}
+
+
+/**
+ * Props
+ */
+h1, h2, h3, h4, h5, nav {
+    font-family: 'Lato', sans-serif;
+}
+
+h2 {
+    margin-top: .2em;
+}
+
+input {
+    width: 100%;
+    border: 0;
+    background: #fcfcfc;
+    border-radius: 3px;
+    padding: 10px;
+    margin: 5px 0px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+button {
+    margin: 5px 0px;
+    padding: 5px 15px;
+    background-color: #000;
+    border: 0;
+    border-radius: 4px;
+    outline: 0;
+    color: #fff;
+    transition: all .3s;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #252525;
+}
+
+
+/**
+ * Navbar
+ */
+header {
+    height: 50px;
+    width: 100%;
+}
+
+nav {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+nav ul li {
+    cursor: pointer;
+    transition: all .2s;
+}
+
+nav ul li:hover {
+    background-color: rgba(0, 0, 0, 0.10);
+}
+
+nav ul li a, 
+nav ul li span {
+    display: inline-block;
+    padding: 8px 20px;
+}
+
+
+/**
+ * Modal
+ */
+.modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+}
+
+.modal .back {
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.10);
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+.modal-content {
+    background-color: #fff;
+    border-radius: 5px;
+    width: 540px;
+    max-width: 100%;
+    padding: 15px;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+/**
+ * File list
+ */
 .filelist {
     list-style-type: none;
     padding: 0;
