--- a/client/src/pure.css
+++ b/client/src/pure.css
@@ -21,8 +21,6 @@ html, body, #root, .app {
 body {
     font-family: "Raleway", sans-serif;
     font-weight: 300;
-    font-size: 1.111em;
-    line-height: 175%;
     color: #1a1a1a;
 }
 
@@ -95,6 +93,8 @@ button:hover {
 header {
     height: 50px;
     width: 100%;
+    border-bottom: solid 1px #ccc;
+    margin-bottom: 15px;
 }
 
 nav {
@@ -111,6 +111,7 @@ nav ul {
 }
 
 nav ul li {
+    height: 100%;
     cursor: pointer;
     transition: all .2s;
 }
@@ -121,8 +122,10 @@ nav ul li:hover {
 
 nav ul li a, 
 nav ul li span {
-    display: inline-block;
+    display: flex;
     padding: 8px 20px;
+    height: 100%;
+    align-items: center;
 }
 
 
@@ -162,7 +165,7 @@ nav ul li span {
  */
 .filelist {
     list-style-type: none;
-    padding: 0;
+    padding: 0px 15px;
     margin: 0;
     width: 100%;
 }
@@ -186,6 +189,8 @@ nav ul li span {
     width: 100%;
     height: 100%;
     display: flex;
+    align-items: center;
+    padding: 1px;
 }
 
 .icon {
