--- a/client/src/pure.css
+++ b/client/src/pure.css
@@ -114,6 +114,7 @@ nav ul li {
     height: 100%;
     cursor: pointer;
     transition: all .2s;
+    display: inline-block;
 }
 
 nav ul li:hover {
