--- a/client/src/pure.css
+++ b/client/src/pure.css
@@ -48,6 +48,10 @@ body {
     align-items: end;
 }
 
+.nohover:hover {
+    background-color: initial !important;
+    color: initial !important;
+}
 
 /**
  * Props
@@ -121,8 +125,8 @@ nav ul li:hover {
     background-color: rgba(0, 0, 0, 0.10);
 }
 
-nav ul li a, 
-nav ul li span {
+nav ul li > a, 
+nav ul li > span {
     display: flex;
     padding: 8px 20px;
     height: 100%;
@@ -161,6 +165,7 @@ nav ul li span {
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
+
 /**
  * File list
  */
@@ -197,3 +202,12 @@ nav ul li span {
 .icon {
     height: 100%;    
 }
+
+
+/**
+| Breadcrumb
+*/
+.breadcrumb:hover {
+    background-color: initial !important;
+}
+
