--- a/client/src/pure.css
+++ b/client/src/pure.css
@@ -51,6 +51,7 @@ body {
 .nohover:hover {
     background-color: initial !important;
     color: initial !important;
+    cursor: initial !important;
 }
 
 /**
@@ -207,7 +208,13 @@ nav ul li > span {
 /**
 | Breadcrumb
 */
-.breadcrumb:hover {
-    background-color: initial !important;
+.breadcrumb > span > span:nth-child(1) {
+    margin-right: 8px;
+    margin-left: 8px;
 }
 
+.breadcrumb a {
+    color: #000;
+    text-decoration: none;
+    outline: none;
+}
